### 生物投影仪 + 现在有几率生成猪灵蛮兵和豹猫。 ### 仪式 + 新增光明修复。 	+ 使用远古仪式的方块，至少2级魔杖。 	+ 消耗8个紫水晶碎片+稀有掉落物将紫水晶块变成紫水晶母岩。

--- a/index.html
+++ b/index.html
@@ -302,7 +302,8 @@
 	<li><a href="#附魔书制作"><span style="background-position: -176px -1776px;"></span> 附魔书制作</a></li>
 	<li><a href="#效果附加"><span class="icons18" style="background-position: -0px -16px;"></span> 效果附加</a></li>
 	<li><a href="#属性附加"><span class="icons18" style="background-position: -144px -0px;"></span> 属性附加</a></li>
-	<li><a href="#黑暗仪式"><span style="background-position: -384px -480px;"></span> 黑暗仪式</a></li>
+	<li><a href="#黑暗召唤"><span style="background-position: -384px -480px;"></span> 黑暗召唤</a></li>
+	<li><a href="#光明修复"><span style="background-position: -224px -192px;"></span> 光明修复</a></li>
 </ul></li>
 <li class="up6"><a href="#装饰"><span class="ci" style="background-position: -64px -384px;"></span> 装饰</a><ul>
 	<li><a href="#称号"><span class="ci" style="background-position: -16px -400px;"></span> 称号</a></li>
@@ -383,18 +384,18 @@
 <tbody>
 	<tr>
 		<td rowspan="2">Java版 20w46a</td>
-		<td>v1.12-1123</td>
-		<td><a href="https://gitee.com/zhangshenxing/CraftingPlusPlus/releases/v1.12-1123">Gitee</a> |
-			<a href="https://github.com/ruhuasiyu/CraftingPlusPlus/releases/tag/v1.12-1123">GitHub</a> |
-			<a href="http://home.ustc.edu.cn/~zsxqq/craftingpp/v1.12-1123.zip">其它</a></td>
+		<td>v1.12-1124</td>
+		<td><a href="https://gitee.com/zhangshenxing/CraftingPlusPlus/releases/v1.12-1124">Gitee</a> |
+			<a href="https://github.com/ruhuasiyu/CraftingPlusPlus/releases/tag/v1.12-1124">GitHub</a> |
+			<a href="http://home.ustc.edu.cn/~zsxqq/craftingpp/v1.12-1124.zip">其它</a></td>
 	</tr>
 	<tr><td colspan="3"></td></tr>
 	<tr>
 		<td rowspan="2">Java版 1.16.2-1.16.4</td>
-		<td>v1.11.2-1123</td>
-		<td><a href="https://gitee.com/zhangshenxing/CraftingPlusPlus/releases/v1.11.2-1123">Gitee</a> |
-			<a href="https://github.com/ruhuasiyu/CraftingPlusPlus/releases/tag/v1.11.2-1123">GitHub</a> |
-			<a href="http://home.ustc.edu.cn/~zsxqq/craftingpp/v1.11.2-1123.zip">其它</a></td>
+		<td>v1.11.2-1124</td>
+		<td><a href="https://gitee.com/zhangshenxing/CraftingPlusPlus/releases/v1.11.2-1124">Gitee</a> |
+			<a href="https://github.com/ruhuasiyu/CraftingPlusPlus/releases/tag/v1.11.2-1124">GitHub</a> |
+			<a href="http://home.ustc.edu.cn/~zsxqq/craftingpp/v1.11.2-1124.zip">其它</a></td>
 	</tr>
 	<tr><td colspan="2"></td></tr>
 	<tr>
@@ -583,7 +584,7 @@
 <h3 id="黑暗碎片">黑暗碎片 <code>cpp:shard_of_the_darkness</code></h3>
 		<a class="ui ci shard_of_the_darkness"></a>
 <p>部分动物因接触黑暗力量的大脑发生了异变，其头部会持续发出黑色颗粒效果，并会靠近和攻击玩家。黑暗动物被玩家杀死后掉落黑暗碎片。</p>
-<p class="note">使用命令<code>scoreboard players set $doDarkAnimalSpawning cppConfig 0或1</code>来关闭/开启生成黑暗生物功能，注意关闭会导致无法使用<a href="#黑暗仪式">黑暗仪式</a>来修复<a href="#破损刷怪笼">破损刷怪笼</a>。</p>
+<p class="note">使用命令<code>scoreboard players set $doDarkAnimalSpawning cppConfig 0或1</code>来关闭/开启生成黑暗生物功能，注意关闭会导致无法使用<a href="#远古仪式">远古仪式</a>来修复<a href="#破损刷怪笼">破损刷怪笼</a>。</p>
 
 <table><thead><tr><th>生物类别</th>
 	<th>攻击方式</th>
@@ -640,7 +641,7 @@
 
 <h3 id="破损的刷怪笼">破损的刷怪笼 <code>cpp:broken_spawner</code></h3>
 <a class="ui ci broken_spawner"></a>
-<p>使用精准采集附魔的镐子破坏刷怪笼获得，在<a href="#黑暗仪式">黑暗仪式</a>中可以修复为普通刷怪笼。</p>
+<p>使用精准采集附魔的镐子破坏刷怪笼获得，在<a href="#远古仪式">远古仪式</a>中可以修复为普通刷怪笼。</p>
 
 <table><thead><tr><th>材料</th>
 	<th>合成配方</th>
@@ -3070,7 +3071,7 @@
 	<td><a class="ui map" title="空地图"></a></td>
 	<td><a class="ui water_bottle" title="水瓶"></a></td>
 	<td><a class="ui black_concrete" title="混凝土"></a></td>
-	<td><a class="ui leather_chestplate" title="去掉染色的皮革盔甲"></a></td>
+	<td><a class="ui broken_leather_chestplate" title="去掉染色的皮革盔甲"></a></td>
 	<td><a class="ui white_banner" title="去掉图案的旗帜"></a></td>
 	<td></td>
 	<td></td>
@@ -3332,7 +3333,7 @@
 		<a class="ui xp_orb" title="经验"><span class="stack">4</span></a>
 	</td>
 </tr>
-<tr><td><span class="oldversion">1.10.x</span> 僵尸猪人</td>
+<tr><td>猪灵(80%)</td>
 	<td><a class="ui ci mob_zombie_pigman" title="僵尸猪人"></a></td>
 	<td rowspan="3"><a class="ui egg" title="鸡蛋"></a>
 		<a class="ui gold_nugget" title="金粒"></a>
@@ -3340,10 +3341,10 @@
 		<a class="ui xp_orb" title="经验"><span class="stack">8</span></a>
 	</td>
 </tr>
-<tr><td><span class="version">1.11起</span> 猪灵(90%)</td>
-	<td><a class="ui ci mob_piglin" title="猪灵"></a></td>
+<tr><td>猪灵蛮兵(10%)</td>
+	<td><a class="ui ci mob_piglin" title="猪灵蛮兵"></a></td>
 </tr>
-<tr><td><span class="version">1.11起</span> 疣猪兽(10%)</td>
+<tr><td>疣猪兽(10%)</td>
 	<td><a class="ui ci mob_hoglin" title="疣猪兽"></a></td>
 </tr>
 <tr><td>恶魂</td>
@@ -3461,9 +3462,9 @@
 		<a class="ui xp_orb" title="经验"><span class="stack">32</span></a>
 	</td>
 </tr>
-<tr><td>猫</td>
+<tr><td>猫(90%)</td>
 	<td><a class="ui ci mob_cat" title="猫"></a></td>
-	<td><a class="ui egg" title="鸡蛋"></a>
+	<td rowspan="2"><a class="ui egg" title="鸡蛋"></a>
 		<a class="ui cod" title="鳕鱼"></a>
 		<a href="#骷髅头颅" class="ui skeleton_skull" title="骷髅头颅"></a>
 		<a class="ui xp_orb" title="经验"><span class="stack">32</span></a><br />
@@ -3472,6 +3473,9 @@
 		<a href="#骷髅头颅" class="ui skeleton_skull" title="骷髅头颅"></a>
 		<a class="ui xp_orb" title="经验"><span class="stack">32</span></a>
 	</td>
+</tr>
+<tr><td>豹猫(10%)</td>
+	<td><a class="ui ci mob_ocelot" title="豹猫"></a></td>
 </tr>
 <tr><td>马</td>
 	<td><a class="ui ci mob_horse" title="马"></a></td>
@@ -8266,40 +8270,61 @@
 
 <p><img style="width:48%" src="items/screenshots/rituals.png" alt="仪式执行中" /> <img style="width:48%" src="items/screenshots/helmet.png" alt="附有效果和属性附加的钻石头盔" /></p>
 
-<h3 id="黑暗仪式">黑暗仪式</h3>
+<h3 id="远古仪式">远古仪式</h3>
 <p>在地面摆出如下形状，然后在基岩上方放置发射器，并在发射器上方放置物品展示框。将材料放入发射器，将待处理的物品放入物品展示框，使用黑暗魔杖shift右击并等待即可。</p>
 <p><span class="ui dp">
-		<a class="obsidian" title="黑曜石"></a>
-		<a class="ci magma_block" title="熔岩块"></a>
-		<a class="obsidian" title="黑曜石"></a>
-		<a class="ci magma_block" title="熔岩块"></a>
-		<a class="bedrock" title="基岩"></a>
-		<a class="ci magma_block" title="熔岩块"></a>
-		<a class="obsidian" title="黑曜石"></a>
-		<a class="ci magma_block" title="熔岩块"></a>
-		<a class="obsidian" title="黑曜石"></a>
-	</span></p>
+	<a class="obsidian" title="黑曜石"></a>
+	<a class="ci magma_block" title="熔岩块"></a>
+	<a class="obsidian" title="黑曜石"></a>
+	<a class="ci magma_block" title="熔岩块"></a>
+	<a class="bedrock" title="基岩"></a>
+	<a class="ci magma_block" title="熔岩块"></a>
+	<a class="obsidian" title="黑曜石"></a>
+	<a class="ci magma_block" title="熔岩块"></a>
+	<a class="obsidian" title="黑曜石"></a>
+</span></p>
 
 <h4 id="黑暗召唤">黑暗召唤</h4>
 <ul>
 <li>魔杖等级：黑暗魔杖</li>
-<li>附加物：<a href="#黑暗碎片">破损刷怪笼</a></li>
+<li>附加物：<a href="#破损刷怪笼">破损刷怪笼</a></li>
 <li>时长：60秒</li>
 <li>消耗材料：<a href="#黑暗碎片">黑暗碎片</a>+<a href="#天空之翼">稀有掉落物</a></li>
 <li>消耗施法者生命：12点</li>
 </ul>
 <p><span class="ui dp">
-		<a class="ci shard_of_the_darkness" title="黑暗碎片"></a>
-		<a class="ci shard_of_the_darkness" title="黑暗碎片"></a>
-		<a class="ci shard_of_the_darkness" title="黑暗碎片"></a>
-		<a class="ci shard_of_the_darkness" title="黑暗碎片"></a>
-		<a href="#天空之翼" class="ci wing_of_sky" title="稀有掉落物"></a>
-		<a class="ci shard_of_the_darkness" title="黑暗碎片"></a>
-		<a class="ci shard_of_the_darkness" title="黑暗碎片"></a>
-		<a class="ci shard_of_the_darkness" title="黑暗碎片"></a>
-		<a class="ci shard_of_the_darkness" title="黑暗碎片"></a>
-	</span></p>
+	<a class="ci shard_of_the_darkness" title="黑暗碎片"></a>
+	<a class="ci shard_of_the_darkness" title="黑暗碎片"></a>
+	<a class="ci shard_of_the_darkness" title="黑暗碎片"></a>
+	<a class="ci shard_of_the_darkness" title="黑暗碎片"></a>
+	<a href="#天空之翼" class="ci wing_of_sky" title="稀有掉落物"></a>
+	<a class="ci shard_of_the_darkness" title="黑暗碎片"></a>
+	<a class="ci shard_of_the_darkness" title="黑暗碎片"></a>
+	<a class="ci shard_of_the_darkness" title="黑暗碎片"></a>
+	<a class="ci shard_of_the_darkness" title="黑暗碎片"></a>
+</span></p>
 <p>仪式完成后，破损刷怪笼将会变成刷怪笼。</p>
+
+<h4 id="光明修复">光明修复</h4>
+<ul>
+<li>魔杖等级：至少2级</li>
+<li>附加物：紫水晶块</li>
+<li>时长：60秒</li>
+<li>消耗材料：紫水晶碎片+<a href="#天空之翼">稀有掉落物</a></li>
+<li>消耗施法者生命：5点</li>
+</ul>
+<p><span class="ui dp">
+	<a class="amethyst_shard" title="紫水晶碎片"></a>
+	<a class="amethyst_shard" title="紫水晶碎片"></a>
+	<a class="amethyst_shard" title="紫水晶碎片"></a>
+	<a class="amethyst_shard" title="紫水晶碎片"></a>
+	<a href="#天空之翼" class="ci wing_of_sky" title="稀有掉落物"></a>
+	<a class="amethyst_shard" title="紫水晶碎片"></a>
+	<a class="amethyst_shard" title="紫水晶碎片"></a>
+	<a class="amethyst_shard" title="紫水晶碎片"></a>
+	<a class="amethyst_shard" title="紫水晶碎片"></a>
+</span></p>
+<p>仪式完成后，紫水晶块将会变成紫水晶母岩。</p>
 
 <!--==================================================================-->
 <h2 id="装饰">装饰</h2>
